# gamera

gamera/: setup.py
gamera/doc/src/: args.txt  image_api.txt  index.txt  major_changes_3x.txt  migration_guide.txt  writing_plugins.txt
gamera/gamera/: args.py  args_wrappers.py  classify.py  core.py  gendoc.py  generate.py  plugin.py  util.py
gamera/gamera/gui/: args_gui.py  classifier_display.py  gamera_display.py  gamera_icons.py  gaoptimizer_display.py  gui.py  gui_util.py  icon_display.py  image_menu.py  toolbar.py
gamera/gamera/plugins/: corelation.py  draw.py  image_utilities.py  logical.py  morphology.py  thinning.py  threshold.py
gamera/include/: accessor.hpp  connected_components.hpp  dimensions.hpp  gamera.hpp  gameramodule.hpp  image.hpp  image_data.hpp  image_types.hpp  image_view.hpp  pixel.hpp  region.hpp  rle_data.hpp  static_image.hpp  vigra_support.hpp
gamera/include/plugins/: arithmetic.hpp  contour.hpp  convolution.hpp  corelation.hpp  deformations.hpp  draw.hpp  edgedetect.hpp  features.hpp  gui_support.hpp  image_conversion.hpp  image_utilities.hpp  logical.hpp  morphology.hpp  png_support.hpp  projections.hpp  runlength.hpp  segmentation.hpp  string_io.hpp  structural.hpp  thinning.hpp  threshold.hpp  tiff_support.hpp  utility.hpp
gamera/include/vigra/: fftw.hxx  recursiveconvolution.hxx  resizeimage.hxx
gamera/include/zlib-1.2.1/: deflate.h  zutil.h
gamera/migration_tools/: gamera_deprecation_filter
gamera/src/: dimensionsobject.cpp  floatpointobject.cpp  gameramodule.cpp  imagedataobject.cpp  imageinfoobject.cpp  imageobject.cpp  knncoremodule.cpp  pointobject.cpp  rectobject.cpp  regionmapobject.cpp  regionobject.cpp
gamera/src/ga/: gaid.h
gamera/src/graph/: spanning_tree.cpp
gamera/tests/: test_floatpoint.py
guiron/: MANIFEST.in  PKG-INFO  README  rename.py  setup.py
guiron/doc/: gendoc.py
guiron/doc/html/: dft.html  index.html  install.html  matched_filtering.html  plugins.html  template matching.html
guiron/doc/src/: dft.txt  index.txt  install.txt  matched_filtering.txt  plugins.txt
guiron/gamera/toolkits/guiron/: __init__.py  main.py
guiron/gamera/toolkits/guiron/plugins/: matched_filtering.py  support_fftw.py
guiron/include/plugins/: support_fftw.hpp
guiron/scripts/: guiron
vector/: INSTALL  LICENSE  MANIFEST.in  PKG-INFO  TODO  setup.py
vector/doc/: gendoc.py
vector/doc/src/: classes.txt  index.txt  plugins.txt  vector.txt
vector/gamera/toolkits/vector/: __init__.py
vector/gamera/toolkits/vector/plugins/: __init__.py  deform.py  render.py  tracing.py  transformation.py  vector_args.py
vector/include/: floatpoint.hpp  path.hpp  pathlist.hpp  segment.hpp  transformation.hpp  vector.hpp  vectormodule.hpp
vector/include/plugins/: deform.hpp  render.hpp  tracing.hpp
vector/src/: floatpointobject.cpp  pathlistobject.cpp  pathobject.cpp  segmentobject.cpp  transformationobject.cpp  vectorcore.cpp
vector/src/potrace-1.4/: ChangeLog  Makefile.am  Makefile.in  NEWS  README  config.h.in  configure  configure.in
vector/src/potrace-1.4/check/: Makefile.am  Makefile.in  backend-check.sh  data1.bmp8r  data2.pbm.out2  input-check.sh  missing.sh  mkbitmap-check.sh  pgmdiff.c  postscript-check.sh  potrace-check.sh
vector/src/potrace-1.4/doc/: Makefile.am  Makefile.in  mkbitmap.1.in  potrace.1.in
vector/src/potrace-1.4/src/: Makefile.am  Makefile.in  backend_eps.c  backend_gimp.c  backend_pgm.c  backend_svg.c  backend_xfig.c  flate.c  have_compress.c  have_compress.h  main.c  mkbitmap.c  ztops.c  ztops.h
vector/tests/: log  test_deform.py  test_floatpoint.py  test_path.py  test_segment.py  test_tracing_render.py  test_transformation.py
